--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           preloader.classList.add('fade-out');
       
           setTimeout(() => {
-            window.location.href = "index.html";
+            window.location.href = "main.html";
           }, 1000); // adjust delay based on your fade-out animation
         });
       </script>
